Switch the drop icon color on light backgrounds

--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "classnames": "^2.2.5",
+    "get-contrast": "^2.0.0",
     "gridicons": "^2.1.0",
     "node-sass-chokidar": "^0.0.3",
     "react": "^16.1.0",
