--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"eslint-plugin-import": "2.8.0",
 		"eslint-plugin-jsx-a11y": "5.1.1",
 		"eslint-plugin-react": "7.4.0",
+		"express": "^4.16.2",
 		"extract-text-webpack-plugin": "3.0.2",
 		"file-loader": "1.1.5",
 		"fs-extra": "3.0.1",
@@ -39,6 +40,7 @@
 		"postcss-flexbugs-fixes": "3.2.0",
 		"postcss-loader": "2.0.8",
 		"promise": "8.0.1",
+		"pug": "^2.0.0-rc.4",
 		"raf": "3.4.0",
 		"react": "^16.1.0",
 		"react-color": "^2.13.8",
@@ -53,12 +55,14 @@
 		"whatwg-fetch": "2.0.3"
 	},
 	"scripts": {
-		"build-css": "node-sass-chokidar src/scss/index.scss src/style.css",
-		"watch-css": "npm run build-css && node-sass-chokidar src/scss/index.scss src/style.css --watch",
-		"start-js": "node scripts/start.js",
-		"start": "npm-run-all -p watch-css start-js",
-		"build-js": "node scripts/build.js",
-		"build": "npm-run-all build-css build-js",
+		"watch": "npm-run-all -p watch:css watch:js",
+		"watch:css": "npm run build:css && node-sass-chokidar src/scss/index.scss src/style.css --watch",
+		"watch:js": "node scripts/start.js",
+		"prestart": "npm run build",
+		"start": "NODE_ENV=production babel-node server/index.js",
+		"build": "npm-run-all build:css build:js",
+		"build:js": "node scripts/build.js",
+		"build:css": "node-sass-chokidar src/scss/index.scss src/style.css",
 		"test": "node scripts/test.js --env=jsdom"
 	},
 	"jest": {
@@ -97,10 +101,15 @@
 	},
 	"babel": {
 		"presets": [
+			"es2015",
 			"react-app"
 		]
 	},
 	"eslintConfig": {
 		"extends": "react-app"
+	},
+	"devDependencies": {
+		"babel-preset-es2015": "^6.24.1",
+		"babel-preset-stage-2": "^6.24.1"
 	}
 }
