--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
 		"babel-eslint": "7.2.3",
 		"babel-jest": "20.0.3",
 		"babel-loader": "7.1.2",
+		"babel-preset-es2015": "^6.24.1",
 		"babel-preset-react-app": "^3.1.0",
+		"babel-preset-stage-2": "^6.24.1",
 		"babel-runtime": "6.26.0",
 		"case-sensitive-paths-webpack-plugin": "2.1.1",
 		"chalk": "1.1.3",
@@ -107,9 +109,5 @@
 	},
 	"eslintConfig": {
 		"extends": "react-app"
-	},
-	"devDependencies": {
-		"babel-preset-es2015": "^6.24.1",
-		"babel-preset-stage-2": "^6.24.1"
 	}
 }
