--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	},
 	"dependencies": {
 		"autoprefixer": "7.1.6",
+		"babel-cli": "^6.26.0",
 		"babel-core": "6.26.0",
 		"babel-eslint": "7.2.3",
 		"babel-jest": "20.0.3",
