--- a/package.json
+++ b/package.json
@@ -7,54 +7,54 @@
 		"npm": "5.5.1"
 	},
 	"dependencies": {
-		"autoprefixer": "7.1.6",
+		"autoprefixer": "^9.1.3",
 		"babel-cli": "^6.26.0",
-		"babel-core": "6.26.0",
-		"babel-eslint": "7.2.3",
-		"babel-jest": "20.0.3",
-		"babel-loader": "7.1.2",
+		"babel-core": "^6.26.3",
+		"babel-eslint": "^8.2.6",
+		"babel-jest": "^20.0.3",
+		"babel-loader": "^7.1.5",
 		"babel-preset-es2015": "^6.24.1",
-		"babel-preset-react-app": "^3.1.0",
+		"babel-preset-react-app": "^3.1.2",
 		"babel-preset-stage-2": "^6.24.1",
 		"babel-runtime": "6.26.0",
-		"case-sensitive-paths-webpack-plugin": "2.1.1",
-		"chalk": "1.1.3",
-		"classnames": "^2.2.5",
-		"css-loader": "0.28.7",
-		"dotenv": "4.0.0",
-		"eslint": "4.10.0",
-		"eslint-config-react-app": "^2.0.1",
-		"eslint-loader": "1.9.0",
-		"eslint-plugin-flowtype": "2.39.1",
-		"eslint-plugin-import": "2.8.0",
-		"eslint-plugin-jsx-a11y": "5.1.1",
-		"eslint-plugin-react": "7.4.0",
-		"express": "^4.16.2",
+		"case-sensitive-paths-webpack-plugin": "^2.1.2",
+		"chalk": "^2.4.1",
+		"classnames": "^2.2.6",
+		"css-loader": "^1.0.0",
+		"dotenv": "^6.0.0",
+		"eslint": "^5.4.0",
+		"eslint-config-react-app": "^2.1.0",
+		"eslint-loader": "^2.1.0",
+		"eslint-plugin-flowtype": "^2.50.0",
+		"eslint-plugin-import": "^2.14.0",
+		"eslint-plugin-jsx-a11y": "^6.1.1",
+		"eslint-plugin-react": "^7.11.1",
+		"express": "^4.16.3",
 		"extract-text-webpack-plugin": "3.0.2",
-		"file-loader": "1.1.5",
-		"fs-extra": "3.0.1",
+		"file-loader": "^2.0.0",
+		"fs-extra": "^7.0.0",
 		"get-contrast": "^2.0.0",
-		"gridicons": "^2.1.0",
-		"html-webpack-plugin": "2.29.0",
-		"jest": "20.0.4",
-		"node-sass-chokidar": "^0.0.3",
-		"npm-run-all": "^4.1.2",
+		"gridicons": "^3.0.1",
+		"html-webpack-plugin": "^3.2.0",
+		"jest": "^20.0.4",
+		"node-sass-chokidar": "^1.3.3",
+		"npm-run-all": "^4.1.3",
 		"object-assign": "4.1.1",
-		"postcss-flexbugs-fixes": "3.2.0",
-		"postcss-loader": "2.0.8",
+		"postcss-flexbugs-fixes": "^4.1.0",
+		"postcss-loader": "^3.0.0",
 		"promise": "8.0.1",
-		"pug": "^2.0.0-rc.4",
+		"pug": "^2.0.3",
 		"raf": "3.4.0",
-		"react": "^16.1.0",
-		"react-color": "^2.13.8",
-		"react-dev-utils": "^4.2.1",
-		"react-dom": "^16.1.0",
-		"style-loader": "0.19.0",
-		"url-loader": "0.6.2",
-		"webpack": "3.8.1",
-		"webpack-dev-server": "2.9.4",
-		"webpack-manifest-plugin": "1.3.2",
-		"whatwg-fetch": "2.0.3"
+		"react": "^16.4.2",
+		"react-color": "^2.14.1",
+		"react-dev-utils": "^5.0.2",
+		"react-dom": "^16.4.2",
+		"style-loader": "^0.22.1",
+		"url-loader": "^1.1.1",
+		"webpack": "^4.17.1",
+		"webpack-dev-server": "^3.1.6",
+		"webpack-manifest-plugin": "^2.0.3",
+		"whatwg-fetch": "^2.0.4"
 	},
 	"scripts": {
 		"build": "npm-run-all build:css build:js",
