--- a/package.json
+++ b/package.json
@@ -3,114 +3,50 @@
 	"version": "0.1.0",
 	"private": true,
 	"engines": {
-		"node": "8.9.1",
-		"npm": "5.5.1"
+		"node": "10.15.3",
+		"npm": "6.9.0"
 	},
 	"dependencies": {
-		"autoprefixer": "^9.1.3",
-		"babel-cli": "^6.26.0",
-		"babel-core": "^6.26.3",
-		"babel-eslint": "^8.2.6",
-		"babel-jest": "^20.0.3",
-		"babel-loader": "^7.1.5",
-		"babel-preset-es2015": "^6.24.1",
-		"babel-preset-react-app": "^3.1.2",
-		"babel-preset-stage-2": "^6.24.1",
-		"babel-runtime": "6.26.0",
-		"case-sensitive-paths-webpack-plugin": "^2.1.2",
-		"chalk": "^2.4.1",
-		"classnames": "^2.2.6",
-		"css-loader": "^1.0.0",
-		"dotenv": "^6.0.0",
-		"eslint": "^5.4.0",
-		"eslint-config-react-app": "^2.1.0",
-		"eslint-loader": "^2.1.0",
-		"eslint-plugin-flowtype": "^2.50.0",
-		"eslint-plugin-import": "^2.14.0",
-		"eslint-plugin-jsx-a11y": "^6.1.1",
-		"eslint-plugin-react": "^7.11.1",
-		"express": "^4.16.3",
-		"extract-text-webpack-plugin": "3.0.2",
-		"file-loader": "^2.0.0",
-		"fs-extra": "^7.0.0",
-		"get-contrast": "^2.0.0",
-		"gridicons": "^3.0.1",
-		"html-webpack-plugin": "^3.2.0",
-		"jest": "^20.0.4",
-		"node-sass-chokidar": "^1.3.3",
-		"npm-run-all": "^4.1.3",
-		"object-assign": "4.1.1",
-		"postcss-flexbugs-fixes": "^4.1.0",
-		"postcss-loader": "^3.0.0",
-		"promise": "8.0.1",
-		"pug": "^2.0.3",
-		"raf": "3.4.0",
-		"react": "^16.4.2",
-		"react-color": "^2.14.1",
-		"react-dev-utils": "^5.0.2",
-		"react-dom": "^16.4.2",
-		"style-loader": "^0.22.1",
-		"url-loader": "^1.1.1",
-		"webpack": "^4.17.1",
-		"webpack-dev-server": "^3.1.6",
-		"webpack-manifest-plugin": "^2.0.3",
-		"whatwg-fetch": "^2.0.4"
+		"@babel/preset-env": "^7.4.5",
+		"@wordpress/eslint-plugin": "2.1.0",
+		"@wordpress/scripts": "3.1.0",
+		"classnames": "2.2.6",
+		"eslint": "^5.16.0",
+		"eslint-plugin-jsx-a11y": "^6.2.1",
+		"eslint-plugin-react": "^7.13.0",
+		"express": "4.17.1",
+		"get-contrast": "2.0.0",
+		"gridicons": "3.3.1",
+		"jest": "^24.8.0",
+		"postcss": "^7.0.16",
+		"pug": "2.0.3",
+		"react": "16.8.6",
+		"react-color": "2.17.3",
+		"react-dom": "16.8.6",
+		"webpack": "^4.32.2",
+		"whatwg-fetch": "3.0.0"
 	},
 	"scripts": {
-		"build": "npm-run-all build:css build:js",
-		"build:js": "node scripts/build.js",
-		"build:css": "node-sass-chokidar src/scss/index.scss src/style.css",
-		"prestart": "npm run build",
+		"build": "wp-scripts build -o build/static/js/index.js",
+		"xpreserver": "npm run build",
 		"server": "NODE_ENV=production babel-node server/index.js",
-		"start": "npm run server",
-		"test": "node scripts/test.js --env=jsdom",
-		"watch": "npm-run-all -p watch:css watch:js",
-		"watch:css": "npm run build:css && node-sass-chokidar src/scss/index.scss src/style.css --watch",
-		"watch:js": "node scripts/start.js"
-	},
-	"jest": {
-		"collectCoverageFrom": [
-			"src/**/*.{js,jsx,mjs}"
-		],
-		"setupFiles": [
-			"<rootDir>/config/polyfills.js"
-		],
-		"testMatch": [
-			"<rootDir>/src/**/__tests__/**/*.{js,jsx,mjs}",
-			"<rootDir>/src/**/?(*.)(spec|test).{js,jsx,mjs}"
-		],
-		"testEnvironment": "node",
-		"testURL": "http://localhost",
-		"transform": {
-			"^.+\\.(js|jsx|mjs)$": "<rootDir>/node_modules/babel-jest",
-			"^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-			"^(?!.*\\.(js|jsx|mjs|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
-		},
-		"transformIgnorePatterns": [
-			"[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs)$"
-		],
-		"moduleNameMapper": {
-			"components\\/(.*)": "<rootDir>/src/components/$1",
-			"utils\\/(.*)": "<rootDir>/src/utils/$1",
-			"^react-native$": "react-native-web"
-		},
-		"moduleFileExtensions": [
-			"web.js",
-			"mjs",
-			"js",
-			"json",
-			"web.jsx",
-			"jsx",
-			"node"
-		]
-	},
-	"babel": {
-		"presets": [
-			"es2015",
-			"react-app"
-		]
+		"start": "wp-scripts start -o build/static/js/index.js",
+		"test": "wp-scripts test-unit-js",
+		"lint:css": "wp-scripts lint-style '**/*.css'",
+		"lint:js": "wp-scripts lint-js src",
+		"lint:pkg-json": "wp-scripts lint-pkg-json ."
 	},
 	"eslintConfig": {
-		"extends": "react-app"
+		"extends": [
+			"plugin:@wordpress/eslint-plugin/recommended"
+		],
+		"rules": {
+			"@wordpress/dependency-group": "off"
+		}
+	},
+	"devDependencies": {
+		"@babel/core": "^7.4.5",
+		"@babel/node": "^7.4.5",
+		"@babel/preset-react": "^7.0.0"
 	}
 }
