--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
 		"react-color": "2.17.3",
 		"react-dom": "16.8.6",
 		"react-hot-loader": "^4.9.0",
+		"react-redux": "^7.0.3",
+		"redux": "^4.0.1",
 		"styled-components": "^4.3.1",
 		"stylelint-config-styled-components": "^0.1.1",
 		"stylelint-processor-styled-components": "^1.8.0",
