--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
 		"build": "NODE_ENV=production webpack",
 		"preserver": "npm run build",
 		"server": "NODE_ENV=production babel-node server/index.js",
-		"lint:js": "wp-scripts lint-js src",
-		"lint:pkg-json": "wp-scripts lint-pkg-json .",
+		"lint:js": "eslint src",
 		"start": "babel-node server/index.js",
 		"test": "wp-scripts test-unit-js"
 	},
@@ -20,35 +19,32 @@
 		}
 	},
 	"dependencies": {
-		"@babel/core": "^7.4.5",
-		"@babel/node": "^7.4.5",
-		"@babel/preset-env": "^7.4.5",
-		"@babel/preset-react": "^7.0.0",
-		"@wordpress/eslint-plugin": "2.1.0",
-		"@wordpress/scripts": "3.1.0",
-		"babel-loader": "^8.0.6",
-		"babel-plugin-styled-components": "^1.10.0",
+		"@babel/core": "7.7.2",
+		"@babel/node": "7.7.0",
+		"@babel/preset-env": "7.7.1",
+		"@babel/preset-react": "7.7.0",
+		"@wordpress/eslint-plugin": "3.2.0",
+		"babel-loader": "8.0.6",
+		"babel-plugin-styled-components": "1.10.6",
 		"classnames": "2.2.6",
-		"eslint": "^5.16.0",
-		"eslint-plugin-jsx-a11y": "^6.2.1",
-		"eslint-plugin-react": "^7.13.0",
+		"eslint": "6.6.0",
 		"express": "4.17.1",
 		"get-contrast": "2.0.0",
 		"gridicons": "3.3.1",
-		"jest": "^24.8.0",
-		"react": "16.8.6",
+		"jest": "24.9.0",
+		"react": "16.12.0",
 		"react-color": "2.17.3",
-		"react-dom": "16.8.6",
-		"react-hot-loader": "^4.9.0",
-		"react-redux": "^7.0.3",
-		"redux": "^4.0.1",
-		"styled-components": "^4.3.1",
-		"stylelint-config-styled-components": "^0.1.1",
-		"stylelint-processor-styled-components": "^1.8.0",
-		"webpack": "^4.32.2",
-		"webpack-dev-middleware": "^3.7.0",
-		"webpack-dev-server": "^3.5.1",
-		"webpack-hot-middleware": "^2.25.0",
+		"react-dom": "16.12.0",
+		"react-hot-loader": "4.12.18",
+		"react-redux": "7.1.3",
+		"redux": "4.0.4",
+		"styled-components": "4.4.1",
+		"stylelint-config-styled-components": "0.1.1",
+		"stylelint-processor-styled-components": "1.8.0",
+		"webpack": "4.41.2",
+		"webpack-dev-middleware": "3.7.2",
+		"webpack-dev-server": "3.9.0",
+		"webpack-hot-middleware": "2.25.0",
 		"whatwg-fetch": "3.0.0"
 	},
 	"engines": {
