--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"stylelint-config-styled-components": "0.1.1",
 		"stylelint-processor-styled-components": "1.8.0",
 		"webpack": "4.41.2",
+		"webpack-cli": "3.3.10",
 		"webpack-dev-middleware": "3.7.2",
 		"webpack-dev-server": "3.9.0",
 		"webpack-hot-middleware": "2.25.0",
