--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,6 @@
 # production
 /build
 
-# build files
-src/style.css
-
 # misc
 .DS_Store
 .env.local
@@ -24,3 +21,4 @@ yarn-debug.log*
 yarn-error.log*
 
 *.sketch
+old
